--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: build
 on:
   push:
-    tags:
-      - '*'
+    branches:
+    - master
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - name: install openscad
         run: sudo apt-get install -y openscad
       - name: install fonts
-        run: sudo cp DnDClassDiceGenerator/fonts/* /usr/share/fonts/ && sudo fc-cache -f -v
+        run: sudo cp ./fonts/* /usr/share/fonts/ && sudo fc-cache -f -v
       - name: build
         run: chmod +x ./build.sh && ./build.sh ${{ steps.version.outputs.version }}
       - name: version
