--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: install fonts
         run: sudo cp ./fonts/* /usr/share/fonts/ && sudo fc-cache -f -v
       - name: build
-        run: chmod +x ./build.sh && ./build.sh ${{ steps.version.outputs.version }}
+        run: chmod +x ./build.sh && ./build.sh release
       - name: version
         run: echo "::set-output name=version::$(./bin/azblogfilter --version)"
         id: version
@@ -40,4 +40,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: stls
-          path: ./build/{{ steps.version.outputs.version }}/*.stl
+          path: ./build/release/*.stl
